--- a/static/style/pastebin.css
+++ b/static/style/pastebin.css
@@ -1,6 +1,7 @@
 #syntaxTable
 {
 	background: none;
+	width: 60em;
 }
 
 #syntaxTable td
@@ -12,7 +13,7 @@
 #postDescription
 {
 	width: 20em;
-	margin-bottom: 2em;
+	margin-bottom: 0.5em;
 }
 
 #content
@@ -32,6 +33,7 @@
 #contentRow td
 {
 	margin: 0;
-	padding: 0;
+	padding: 1em 0 0 0;
+	border: 0;
 	/* background-color: #808080; */
 }
